tests/NormalTests/paczka1/fuzzy1/32250225.err
Error in line 4: csdO4F S387 33,7
Error in line 1: S883 S387 14,8
Error in line 5: JinpnF9M S883 21,7
Error in line 11: qtEsZkXN S387 59,4
Error in line 25: JinpnF9M S236 29,4
Error in line 28: JinpnF9M A333 38,5
Error in line 30: JinpnF9M S883 14,0
